{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 119,
  "lineage": "829118f6-f96f-f6c3-d842-d93f531a4762",
  "resources": [
    {
      "module": "module.ext_lb",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/Ext_LB/frontendIPConfigurations/frontend",
                "name": "frontend",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/publicIPAddresses/ext_pip"
              }
            ],
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/Ext_LB",
            "location": "eastus",
            "name": "Ext_LB",
            "resource_group_name": "Load_Balancers",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Test": "myBluePrint"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.ext_lb.azurerm_public_ip.ip",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "module": "module.ext_lb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/Ext_LB/backendAddressPools/backend",
            "loadbalancer_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/Ext_LB",
            "name": "backend"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.ext_lb.azurerm_lb.lb",
            "module.ext_lb.azurerm_public_ip.ip",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "module": "module.ext_lb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool_address",
      "name": "pool_address_ext",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/Ext_LB/backendAddressPools/backend",
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/Ext_LB/backendAddressPools/backend/addresses/backend_ext_A",
            "ip_address": "10.6.1.4",
            "name": "backend_ext_A",
            "virtual_network_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.ext_lb.azurerm_lb.lb",
            "module.ext_lb.azurerm_lb_backend_address_pool.pool",
            "module.ext_lb.azurerm_public_ip.ip",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.ext_lb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool_address",
      "name": "pool_address_ext1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/Ext_LB/backendAddressPools/backend",
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/Ext_LB/backendAddressPools/backend/addresses/backend_ext_B",
            "ip_address": "10.6.1.5",
            "name": "backend_ext_B",
            "virtual_network_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.ext_lb.azurerm_lb.lb",
            "module.ext_lb.azurerm_lb_backend_address_pool.pool",
            "module.ext_lb.azurerm_public_ip.ip",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.ext_lb",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "health_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/Ext_LB/probes/ext_health_probe",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/Ext_LB",
            "name": "ext_health_probe",
            "number_of_probes": 1,
            "port": 22,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.ext_lb.azurerm_lb.lb",
            "module.ext_lb.azurerm_public_ip.ip",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "module": "module.ext_lb",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/Ext_LB/backendAddressPools/backend"
            ],
            "backend_port": 22,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/Ext_LB/frontendIPConfigurations/frontend",
            "frontend_ip_configuration_name": "frontend",
            "frontend_port": 22,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/Ext_LB/loadBalancingRules/ext_lb_rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "SourceIPProtocol",
            "loadbalancer_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/Ext_LB",
            "name": "ext_lb_rule",
            "probe_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/Ext_LB/probes/ext_health_probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.ext_lb.azurerm_lb.lb",
            "module.ext_lb.azurerm_lb_backend_address_pool.pool",
            "module.ext_lb.azurerm_lb_probe.health_probe",
            "module.ext_lb.azurerm_public_ip.ip",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "module": "module.ext_lb",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/publicIPAddresses/ext_pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.68.155.167",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "ext_pip",
            "resource_group_name": "Load_Balancers",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Test": "myBluePrint"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "module": "module.fw_lb",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_FW_LB/frontendIPConfigurations/frontend",
                "name": "frontend",
                "private_ip_address": "10.6.2.6",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/fw_subnet_B"
              }
            ],
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_FW_LB",
            "location": "eastus",
            "name": "T1_FW_LB",
            "private_ip_address": "10.6.2.6",
            "private_ip_addresses": [
              "10.6.2.6"
            ],
            "resource_group_name": "Load_Balancers",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Test": "myBluePrint"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.fw_lb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_FW_LB/backendAddressPools/backend_pool",
            "loadbalancer_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_FW_LB",
            "name": "backend_pool"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.fw_lb.azurerm_lb.lb",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.fw_lb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool_address",
      "name": "pool_address_int",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_FW_LB/backendAddressPools/backend_pool",
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_FW_LB/backendAddressPools/backend_pool/addresses/backend_int",
            "ip_address": "10.6.2.4",
            "name": "backend_int",
            "virtual_network_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.fw_lb.azurerm_lb.lb",
            "module.fw_lb.azurerm_lb_backend_address_pool.pool",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.fw_lb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool_address",
      "name": "pool_address_int1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_FW_LB/backendAddressPools/backend_pool",
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_FW_LB/backendAddressPools/backend_pool/addresses/backend_int1",
            "ip_address": "10.6.2.5",
            "name": "backend_int1",
            "virtual_network_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.fw_lb.azurerm_lb.lb",
            "module.fw_lb.azurerm_lb_backend_address_pool.pool",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.fw_lb",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "health_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_FW_LB/probes/fw_health_probe",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_FW_LB",
            "name": "fw_health_probe",
            "number_of_probes": 1,
            "port": 22,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.fw_lb.azurerm_lb.lb",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.fw_lb",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_FW_LB/backendAddressPools/backend_pool"
            ],
            "backend_port": 0,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_FW_LB/frontendIPConfigurations/frontend",
            "frontend_ip_configuration_name": "frontend",
            "frontend_port": 0,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_FW_LB/loadBalancingRules/fw_lb_rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_FW_LB",
            "name": "fw_lb_rule",
            "probe_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_FW_LB/probes/fw_health_probe",
            "protocol": "All"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.fw_lb.azurerm_lb.lb",
            "module.fw_lb.azurerm_lb_backend_address_pool.pool",
            "module.fw_lb.azurerm_lb_probe.health_probe",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.idps_lb",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/frontendIPConfigurations/frontend_int",
                "name": "frontend_int",
                "private_ip_address": "10.6.4.6",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/idps_subnet_B"
              },
              {
                "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/frontendIPConfigurations/frontend_ext",
                "name": "frontend_ext",
                "private_ip_address": "10.6.3.6",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/idps_subnet_A"
              }
            ],
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB",
            "location": "eastus",
            "name": "T1_IDPS_LB",
            "private_ip_address": "10.6.4.6",
            "private_ip_addresses": [
              "10.6.4.6",
              "10.6.3.6"
            ],
            "resource_group_name": "Load_Balancers",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Test": "myBluePrint"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.idps_lb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "pool_ext",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/backendAddressPools/backend_ext_pool",
            "loadbalancer_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB",
            "name": "backend_ext_pool"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.idps_lb.azurerm_lb.lb",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.idps_lb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "pool_int",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/backendAddressPools/backend_int_pool",
            "loadbalancer_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB",
            "name": "backend_int_pool"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.idps_lb.azurerm_lb.lb",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.idps_lb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool_address",
      "name": "pool_address_ext_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/backendAddressPools/backend_ext_pool",
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/backendAddressPools/backend_ext_pool/addresses/backend_ext_A",
            "ip_address": "10.6.3.4",
            "name": "backend_ext_A",
            "virtual_network_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.idps_lb.azurerm_lb.lb",
            "module.idps_lb.azurerm_lb_backend_address_pool.pool_ext",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.idps_lb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool_address",
      "name": "pool_address_ext_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/backendAddressPools/backend_ext_pool",
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/backendAddressPools/backend_ext_pool/addresses/backend_ext_B",
            "ip_address": "10.6.3.5",
            "name": "backend_ext_B",
            "virtual_network_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.idps_lb.azurerm_lb.lb",
            "module.idps_lb.azurerm_lb_backend_address_pool.pool_ext",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.idps_lb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool_address",
      "name": "pool_address_int_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/backendAddressPools/backend_int_pool",
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/backendAddressPools/backend_int_pool/addresses/backend_int_A",
            "ip_address": "10.6.4.4",
            "name": "backend_int_A",
            "virtual_network_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.idps_lb.azurerm_lb.lb",
            "module.idps_lb.azurerm_lb_backend_address_pool.pool_int",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.idps_lb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool_address",
      "name": "pool_address_int_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/backendAddressPools/backend_int_pool",
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/backendAddressPools/backend_int_pool/addresses/backend_int_B",
            "ip_address": "10.6.4.5",
            "name": "backend_int_B",
            "virtual_network_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.idps_lb.azurerm_lb.lb",
            "module.idps_lb.azurerm_lb_backend_address_pool.pool_int",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.idps_lb",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "health_probe_ext",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/probes/idps_health_probe_ext",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB",
            "name": "idps_health_probe_ext",
            "number_of_probes": 1,
            "port": 22,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.idps_lb.azurerm_lb.lb",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.idps_lb",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "health_probe_int",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/probes/idps_health_probe_int",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB",
            "name": "idps_health_probe_int",
            "number_of_probes": 1,
            "port": 22,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.idps_lb.azurerm_lb.lb",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.idps_lb",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "rule_ext",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/backendAddressPools/backend_ext_pool"
            ],
            "backend_port": 0,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/frontendIPConfigurations/frontend_ext",
            "frontend_ip_configuration_name": "frontend_ext",
            "frontend_port": 0,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/loadBalancingRules/idps_lb_rule_ext",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB",
            "name": "idps_lb_rule_ext",
            "probe_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/probes/idps_health_probe_ext",
            "protocol": "All"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.idps_lb.azurerm_lb.lb",
            "module.idps_lb.azurerm_lb_backend_address_pool.pool_ext",
            "module.idps_lb.azurerm_lb_probe.health_probe_ext",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.idps_lb",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "rule_int",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/backendAddressPools/backend_int_pool"
            ],
            "backend_port": 0,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/frontendIPConfigurations/frontend_int",
            "frontend_ip_configuration_name": "frontend_int",
            "frontend_port": 0,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/loadBalancingRules/idps_lb_rule_int",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB",
            "name": "idps_lb_rule_int",
            "probe_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Load_Balancers/providers/Microsoft.Network/loadBalancers/T1_IDPS_LB/probes/idps_health_probe_int",
            "protocol": "All"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.idps_lb.azurerm_lb.lb",
            "module.idps_lb.azurerm_lb_backend_address_pool.pool_int",
            "module.idps_lb.azurerm_lb_probe.health_probe_int",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nic_fw_A",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_T1fW_A1",
            "internal_domain_name_suffix": "44q1ddrvezou3nk3wajng4efca.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "T1fW_A1",
                "primary": true,
                "private_ip_address": "10.6.1.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/fw_subnet_A"
              }
            ],
            "location": "eastus",
            "name": "nic_T1fW_A1",
            "private_ip_address": "10.6.1.4",
            "private_ip_addresses": [
              "10.6.1.4"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "Test": "myBluePrint",
              "env": "T1"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_T1fW_A2",
            "internal_domain_name_suffix": "44q1ddrvezou3nk3wajng4efca.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "T1fW_A2",
                "primary": true,
                "private_ip_address": "10.6.2.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/fw_subnet_B"
              }
            ],
            "location": "eastus",
            "name": "nic_T1fW_A2",
            "private_ip_address": "10.6.2.4",
            "private_ip_addresses": [
              "10.6.2.4"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "Test": "myBluePrint",
              "env": "T1"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_T1fW_A3",
            "internal_domain_name_suffix": "44q1ddrvezou3nk3wajng4efca.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "T1fW_A3",
                "primary": true,
                "private_ip_address": "10.6.5.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/management_subnet"
              }
            ],
            "location": "eastus",
            "name": "nic_T1fW_A3",
            "private_ip_address": "10.6.5.4",
            "private_ip_addresses": [
              "10.6.5.4"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "Test": "myBluePrint",
              "env": "T1"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_T1fW_A4",
            "internal_domain_name_suffix": "44q1ddrvezou3nk3wajng4efca.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "T1fW_A4",
                "primary": true,
                "private_ip_address": "10.6.6.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/lb_subnet"
              }
            ],
            "location": "eastus",
            "name": "nic_T1fW_A4",
            "private_ip_address": "10.6.6.4",
            "private_ip_addresses": [
              "10.6.6.4"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "Test": "myBluePrint",
              "env": "T1"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nic_fw_A",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkSecurityGroups/fw_t1_A_nsg",
            "location": "eastus",
            "name": "fw_t1_A_nsg",
            "resource_group_name": "Network_Interfaces",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAnySSHInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "22",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Test": "myBluePrint"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "module": "module.nic_fw_A",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/fw_subnet_A",
            "network_security_group_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkSecurityGroups/fw_t1_A_nsg",
            "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/fw_subnet_A"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.nic_fw_A.azurerm_network_security_group.nsg",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nic_fw_B",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_T1fw_B1",
            "internal_domain_name_suffix": "44q1ddrvezou3nk3wajng4efca.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "T1fw_B1",
                "primary": true,
                "private_ip_address": "10.6.1.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/fw_subnet_A"
              }
            ],
            "location": "eastus",
            "name": "nic_T1fw_B1",
            "private_ip_address": "10.6.1.5",
            "private_ip_addresses": [
              "10.6.1.5"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "Test": "myBluePrint",
              "env": "T1"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_T1fw_B2",
            "internal_domain_name_suffix": "44q1ddrvezou3nk3wajng4efca.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "T1fw_B2",
                "primary": true,
                "private_ip_address": "10.6.2.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/fw_subnet_B"
              }
            ],
            "location": "eastus",
            "name": "nic_T1fw_B2",
            "private_ip_address": "10.6.2.5",
            "private_ip_addresses": [
              "10.6.2.5"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "Test": "myBluePrint",
              "env": "T1"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_T1fw_B3",
            "internal_domain_name_suffix": "44q1ddrvezou3nk3wajng4efca.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "T1fw_B3",
                "primary": true,
                "private_ip_address": "10.6.5.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/management_subnet"
              }
            ],
            "location": "eastus",
            "name": "nic_T1fw_B3",
            "private_ip_address": "10.6.5.5",
            "private_ip_addresses": [
              "10.6.5.5"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "Test": "myBluePrint",
              "env": "T1"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_T1fw_B4",
            "internal_domain_name_suffix": "44q1ddrvezou3nk3wajng4efca.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "T1fw_B4",
                "primary": true,
                "private_ip_address": "10.6.6.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/lb_subnet"
              }
            ],
            "location": "eastus",
            "name": "nic_T1fw_B4",
            "private_ip_address": "10.6.6.5",
            "private_ip_addresses": [
              "10.6.6.5"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "Test": "myBluePrint",
              "env": "T1"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nic_fw_B",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkSecurityGroups/fw_t1_B_nsg",
            "location": "eastus",
            "name": "fw_t1_B_nsg",
            "resource_group_name": "Network_Interfaces",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAnySSHInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "22",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Test": "myBluePrint"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "module": "module.nic_fw_B",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/fw_subnet_B",
            "network_security_group_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkSecurityGroups/fw_t1_B_nsg",
            "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/fw_subnet_B"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.nic_fw_B.azurerm_network_security_group.nsg",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/management_subnet",
            "network_security_group_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkSecurityGroups/fw_t1_B_nsg",
            "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/management_subnet"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.nic_fw_B.azurerm_network_security_group.nsg",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/lb_subnet",
            "network_security_group_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkSecurityGroups/fw_t1_B_nsg",
            "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/lb_subnet"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.nic_fw_B.azurerm_network_security_group.nsg",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nic_idps_A",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_IDPS_A1",
            "internal_domain_name_suffix": "44q1ddrvezou3nk3wajng4efca.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "IDPS_A1",
                "primary": true,
                "private_ip_address": "10.6.3.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/idps_subnet_A"
              }
            ],
            "location": "eastus",
            "name": "nic_IDPS_A1",
            "private_ip_address": "10.6.3.4",
            "private_ip_addresses": [
              "10.6.3.4"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "Test": "myBluePrint",
              "env": "T1"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_IDPS_A2",
            "internal_domain_name_suffix": "44q1ddrvezou3nk3wajng4efca.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "IDPS_A2",
                "primary": true,
                "private_ip_address": "10.6.4.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/idps_subnet_B"
              }
            ],
            "location": "eastus",
            "name": "nic_IDPS_A2",
            "private_ip_address": "10.6.4.4",
            "private_ip_addresses": [
              "10.6.4.4"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "Test": "myBluePrint",
              "env": "T1"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_IDPS_A3",
            "internal_domain_name_suffix": "44q1ddrvezou3nk3wajng4efca.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "IDPS_A3",
                "primary": true,
                "private_ip_address": "10.6.5.6",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/management_subnet"
              }
            ],
            "location": "eastus",
            "name": "nic_IDPS_A3",
            "private_ip_address": "10.6.5.6",
            "private_ip_addresses": [
              "10.6.5.6"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "Test": "myBluePrint",
              "env": "T1"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_IDPS_A4",
            "internal_domain_name_suffix": "44q1ddrvezou3nk3wajng4efca.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "IDPS_A4",
                "primary": true,
                "private_ip_address": "10.6.6.6",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/lb_subnet"
              }
            ],
            "location": "eastus",
            "name": "nic_IDPS_A4",
            "private_ip_address": "10.6.6.6",
            "private_ip_addresses": [
              "10.6.6.6"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "Test": "myBluePrint",
              "env": "T1"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nic_idps_A",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkSecurityGroups/idps_A_nsg",
            "location": "eastus",
            "name": "idps_A_nsg",
            "resource_group_name": "Network_Interfaces",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAnySSHInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "22",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Test": "myBluePrint"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "module": "module.nic_idps_A",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/idps_subnet_A",
            "network_security_group_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkSecurityGroups/idps_A_nsg",
            "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/idps_subnet_A"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.nic_idps_A.azurerm_network_security_group.nsg",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/idps_subnet_B",
            "network_security_group_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkSecurityGroups/idps_A_nsg",
            "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/idps_subnet_B"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.nic_idps_A.azurerm_network_security_group.nsg",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nic_idps_B",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_IDPS_B1",
            "internal_domain_name_suffix": "44q1ddrvezou3nk3wajng4efca.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "IDPS_B1",
                "primary": true,
                "private_ip_address": "10.6.3.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/idps_subnet_A"
              }
            ],
            "location": "eastus",
            "name": "nic_IDPS_B1",
            "private_ip_address": "10.6.3.5",
            "private_ip_addresses": [
              "10.6.3.5"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "Test": "myBluePrint",
              "env": "T1"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_IDPS_B2",
            "internal_domain_name_suffix": "44q1ddrvezou3nk3wajng4efca.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "IDPS_B2",
                "primary": true,
                "private_ip_address": "10.6.4.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/idps_subnet_B"
              }
            ],
            "location": "eastus",
            "name": "nic_IDPS_B2",
            "private_ip_address": "10.6.4.5",
            "private_ip_addresses": [
              "10.6.4.5"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "Test": "myBluePrint",
              "env": "T1"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_IDPS_B3",
            "internal_domain_name_suffix": "44q1ddrvezou3nk3wajng4efca.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "IDPS_B3",
                "primary": true,
                "private_ip_address": "10.6.5.7",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/management_subnet"
              }
            ],
            "location": "eastus",
            "name": "nic_IDPS_B3",
            "private_ip_address": "10.6.5.7",
            "private_ip_addresses": [
              "10.6.5.7"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "Test": "myBluePrint",
              "env": "T1"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_IDPS_B4",
            "internal_domain_name_suffix": "44q1ddrvezou3nk3wajng4efca.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "IDPS_B4",
                "primary": true,
                "private_ip_address": "10.6.6.7",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/lb_subnet"
              }
            ],
            "location": "eastus",
            "name": "nic_IDPS_B4",
            "private_ip_address": "10.6.6.7",
            "private_ip_addresses": [
              "10.6.6.7"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "Test": "myBluePrint",
              "env": "T1"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nic_idps_B",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkSecurityGroups/idps_B_nsg",
            "location": "eastus",
            "name": "idps_B_nsg",
            "resource_group_name": "Network_Interfaces",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAnySSHInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "22",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Test": "myBluePrint"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "module": "module.nic_t2_A",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_t2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_T2fW_A1",
            "internal_domain_name_suffix": "hu3bu0pbsjxunfzxegxom2rprh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "T2fW_A1",
                "primary": true,
                "private_ip_address": "10.8.0.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T2/subnets/fw_A_subnet_t2"
              }
            ],
            "location": "eastus",
            "name": "nic_T2fW_A1",
            "private_ip_address": "10.8.0.5",
            "private_ip_addresses": [
              "10.8.0.5"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "env": "T2"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t2.azurerm_subnet.subnet_t2",
            "module.vnet_t2.azurerm_virtual_network.vnet_t2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_T2fW_A2",
            "internal_domain_name_suffix": "hu3bu0pbsjxunfzxegxom2rprh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "T2fW_A2",
                "primary": true,
                "private_ip_address": "10.8.0.6",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T2/subnets/fw_A_subnet_t2"
              }
            ],
            "location": "eastus",
            "name": "nic_T2fW_A2",
            "private_ip_address": "10.8.0.6",
            "private_ip_addresses": [
              "10.8.0.6"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "env": "T2"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t2.azurerm_subnet.subnet_t2",
            "module.vnet_t2.azurerm_virtual_network.vnet_t2"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_T2fW_A3",
            "internal_domain_name_suffix": "hu3bu0pbsjxunfzxegxom2rprh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "T2fW_A3",
                "primary": true,
                "private_ip_address": "10.8.0.37",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T2/subnets/fw_B_subnet_t2"
              }
            ],
            "location": "eastus",
            "name": "nic_T2fW_A3",
            "private_ip_address": "10.8.0.37",
            "private_ip_addresses": [
              "10.8.0.37"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "env": "T2"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t2.azurerm_subnet.subnet_t2",
            "module.vnet_t2.azurerm_virtual_network.vnet_t2"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_T2fW_A4",
            "internal_domain_name_suffix": "hu3bu0pbsjxunfzxegxom2rprh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "T2fW_A4",
                "primary": true,
                "private_ip_address": "10.8.0.38",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T2/subnets/fw_B_subnet_t2"
              }
            ],
            "location": "eastus",
            "name": "nic_T2fW_A4",
            "private_ip_address": "10.8.0.38",
            "private_ip_addresses": [
              "10.8.0.38"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "env": "T2"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t2.azurerm_subnet.subnet_t2",
            "module.vnet_t2.azurerm_virtual_network.vnet_t2"
          ]
        }
      ]
    },
    {
      "module": "module.nic_t2_A",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_t2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkSecurityGroups/fw_t2_A_nsg",
            "location": "eastus",
            "name": "fw_t2_A_nsg",
            "resource_group_name": "Network_Interfaces",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAnySSHInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "22",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "module": "module.nic_t2_A",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "example_t2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription1",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T2/subnets/fw_A_subnet_t2",
            "network_security_group_id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkSecurityGroups/fw_t2_A_nsg",
            "subnet_id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T2/subnets/fw_A_subnet_t2"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.nic_t2_A.azurerm_network_security_group.nsg_t2",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t2.azurerm_subnet.subnet_t2",
            "module.vnet_t2.azurerm_virtual_network.vnet_t2"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T2/subnets/fw_B_subnet_t2",
            "network_security_group_id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkSecurityGroups/fw_t2_A_nsg",
            "subnet_id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T2/subnets/fw_B_subnet_t2"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.nic_t2_A.azurerm_network_security_group.nsg_t2",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t2.azurerm_subnet.subnet_t2",
            "module.vnet_t2.azurerm_virtual_network.vnet_t2"
          ]
        }
      ]
    },
    {
      "module": "module.nic_t2_B",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_t2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_T2fW_B1",
            "internal_domain_name_suffix": "hu3bu0pbsjxunfzxegxom2rprh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "T2fW_B1",
                "primary": true,
                "private_ip_address": "10.8.0.39",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T2/subnets/fw_B_subnet_t2"
              }
            ],
            "location": "eastus",
            "name": "nic_T2fW_B1",
            "private_ip_address": "10.8.0.39",
            "private_ip_addresses": [
              "10.8.0.39"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "env": "T2"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t2.azurerm_subnet.subnet_t2",
            "module.vnet_t2.azurerm_virtual_network.vnet_t2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_T2fW_B2",
            "internal_domain_name_suffix": "hu3bu0pbsjxunfzxegxom2rprh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "T2fW_B2",
                "primary": true,
                "private_ip_address": "10.8.0.40",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T2/subnets/fw_B_subnet_t2"
              }
            ],
            "location": "eastus",
            "name": "nic_T2fW_B2",
            "private_ip_address": "10.8.0.40",
            "private_ip_addresses": [
              "10.8.0.40"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "env": "T2"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t2.azurerm_subnet.subnet_t2",
            "module.vnet_t2.azurerm_virtual_network.vnet_t2"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_T2fW_B3",
            "internal_domain_name_suffix": "hu3bu0pbsjxunfzxegxom2rprh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "T2fW_B3",
                "primary": true,
                "private_ip_address": "10.8.0.7",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T2/subnets/fw_A_subnet_t2"
              }
            ],
            "location": "eastus",
            "name": "nic_T2fW_B3",
            "private_ip_address": "10.8.0.7",
            "private_ip_addresses": [
              "10.8.0.7"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "env": "T2"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t2.azurerm_subnet.subnet_t2",
            "module.vnet_t2.azurerm_virtual_network.vnet_t2"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkInterfaces/nic_T2fW_B4",
            "internal_domain_name_suffix": "hu3bu0pbsjxunfzxegxom2rprh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "T2fW_B4",
                "primary": true,
                "private_ip_address": "10.8.0.8",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T2/subnets/fw_A_subnet_t2"
              }
            ],
            "location": "eastus",
            "name": "nic_T2fW_B4",
            "private_ip_address": "10.8.0.8",
            "private_ip_addresses": [
              "10.8.0.8"
            ],
            "resource_group_name": "Network_Interfaces",
            "tags": {
              "env": "T2"
            },
            "timeouts": {
              "delete": "600h"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t2.azurerm_subnet.subnet_t2",
            "module.vnet_t2.azurerm_virtual_network.vnet_t2"
          ]
        }
      ]
    },
    {
      "module": "module.nic_t2_B",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_t2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/Network_Interfaces/providers/Microsoft.Network/networkSecurityGroups/fw_t2_B_nsg",
            "location": "eastus",
            "name": "fw_t2_B_nsg",
            "resource_group_name": "Network_Interfaces",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAnySSHInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "22",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_app",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.7.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/83f6da2b-dc32-44ba-9ee4-eb589b783d82/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_App/subnets/app_subnet",
            "name": "app_subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "VNets",
            "virtual_network_name": "Vnet_App"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_app.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_app",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.7.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3ad3ce7a-4106-4580-a144-5bc182b893d4",
            "id": "/subscriptions/83f6da2b-dc32-44ba-9ee4-eb589b783d82/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_App",
            "location": "eastus",
            "name": "Vnet_App",
            "resource_group_name": "VNets",
            "tags": {
              "env": "T1"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_t1",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.6.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/fw_subnet_A",
            "name": "fw_subnet_A",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "VNets",
            "virtual_network_name": "Vnet_T1"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.6.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/fw_subnet_B",
            "name": "fw_subnet_B",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "VNets",
            "virtual_network_name": "Vnet_T1"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.6.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/idps_subnet_A",
            "name": "idps_subnet_A",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "VNets",
            "virtual_network_name": "Vnet_T1"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.6.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/idps_subnet_B",
            "name": "idps_subnet_B",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "VNets",
            "virtual_network_name": "Vnet_T1"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.6.5.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/management_subnet",
            "name": "management_subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "VNets",
            "virtual_network_name": "Vnet_T1"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.6.6.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/subnets/lb_subnet",
            "name": "lb_subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "VNets",
            "virtual_network_name": "Vnet_T1"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_t1",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.6.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8eb1a1f7-2635-4e5d-b55d-b012d3788510",
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1",
            "location": "eastus",
            "name": "Vnet_T1",
            "resource_group_name": "VNets",
            "tags": {
              "Test": "myBluePrint",
              "env": "T1"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_t2",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_t2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.8.0.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T2/subnets/fw_A_subnet_t2",
            "name": "fw_A_subnet_t2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "VNets",
            "virtual_network_name": "Vnet_T2"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t2.azurerm_virtual_network.vnet_t2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.8.0.32/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T2/subnets/fw_B_subnet_t2",
            "name": "fw_B_subnet_t2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "VNets",
            "virtual_network_name": "Vnet_T2"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_t2.azurerm_virtual_network.vnet_t2"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_t2",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_t2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.8.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "691a3a3d-92e1-466f-9737-21aee6722f8f",
            "id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T2",
            "location": "eastus",
            "name": "Vnet_T2",
            "resource_group_name": "VNets",
            "tags": {
              "env": "T2"
            }
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current"
          ]
        }
      ]
    },
    {
      "module": "module.vnetpeer_app_hubT1",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/83f6da2b-dc32-44ba-9ee4-eb589b783d82/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_App/virtualNetworkPeerings/vnet_peering-app-hubT1",
            "name": "vnet_peering-app-hubT1",
            "remote_virtual_network_id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1",
            "resource_group_name": "VNets",
            "use_remote_gateways": false,
            "virtual_network_name": "Vnet_App"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.resource_group_app.azurerm_resource_group.rg2",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_app.azurerm_subnet.subnet",
            "module.vnet_app.azurerm_virtual_network.vnet",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnetpeer_app_hubT2",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/83f6da2b-dc32-44ba-9ee4-eb589b783d82/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_App/virtualNetworkPeerings/vnet_peering-app-hubT2",
            "name": "vnet_peering-app-hubT2",
            "remote_virtual_network_id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T2",
            "resource_group_name": "VNets",
            "use_remote_gateways": false,
            "virtual_network_name": "Vnet_App"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.resource_group_app.azurerm_resource_group.rg2",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_app.azurerm_subnet.subnet",
            "module.vnet_app.azurerm_virtual_network.vnet",
            "module.vnet_t2.azurerm_subnet.subnet_t2",
            "module.vnet_t2.azurerm_virtual_network.vnet_t2"
          ]
        }
      ]
    },
    {
      "module": "module.vnetpeer_hubT1_app",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/be510eed-cdc2-4632-9501-a44fe47aa346/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T1/virtualNetworkPeerings/vnet_peering-hubT1-app",
            "name": "vnet_peering-hubT1-app",
            "remote_virtual_network_id": "/subscriptions/83f6da2b-dc32-44ba-9ee4-eb589b783d82/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_App",
            "resource_group_name": "VNets",
            "use_remote_gateways": false,
            "virtual_network_name": "Vnet_T1"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_app.azurerm_subnet.subnet",
            "module.vnet_app.azurerm_virtual_network.vnet",
            "module.vnet_t1.azurerm_subnet.subnet",
            "module.vnet_t1.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnetpeer_hubT2_app",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].NameOfSubscription1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/27adeba3-f0dc-4d7e-ae23-3ccc9a73f37d/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_T2/virtualNetworkPeerings/vnet_peering-hubT2-app",
            "name": "vnet_peering-hubT2-app",
            "remote_virtual_network_id": "/subscriptions/83f6da2b-dc32-44ba-9ee4-eb589b783d82/resourceGroups/VNets/providers/Microsoft.Network/virtualNetworks/Vnet_App",
            "resource_group_name": "VNets",
            "use_remote_gateways": false,
            "virtual_network_name": "Vnet_T2"
          },
          "dependencies": [
            "module.backupvault.azurerm_backup_policy_vm.default_backup_policy",
            "module.backupvault.azurerm_recovery_services_vault.vault",
            "module.monitoring.azurerm_log_analytics_workspace.loganalyticsdeploy",
            "module.resource_group.azurerm_resource_group.rg",
            "module.resource_group_t2.azurerm_resource_group.rg1",
            "module.setazpolicy.azurerm_management_group_policy_assignment.benchmark",
            "module.setazpolicy.azurerm_management_group_policy_assignment.dataprotect",
            "module.setazpolicy.azurerm_management_group_policy_assignment.governance",
            "module.setazpolicy.azurerm_management_group_policy_assignment.monitor",
            "module.setazpolicy.azurerm_policy_set_definition.dataprotect",
            "module.setazpolicy.azurerm_policy_set_definition.governance",
            "module.setazpolicy.data.azurerm_management_group.mgmntgroup",
            "module.setazpolicy.data.azurerm_subscription.current",
            "module.vnet_app.azurerm_subnet.subnet",
            "module.vnet_app.azurerm_virtual_network.vnet",
            "module.vnet_t2.azurerm_subnet.subnet_t2",
            "module.vnet_t2.azurerm_virtual_network.vnet_t2"
          ]
        }
      ]
    }
  ]
}